fixed visibility of alt attributes

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -29,7 +29,11 @@ body {
 }
 
 .project-background {
-    background-color: white;
+    background-color: #4accfc;
+}
+
+.altcolour {
+    color: #313131; 
 }
 
 .content {
